[gd_scene load_steps=3 format=3 uid="uid://vrev0us2o6b0"]

[ext_resource type="Script" uid="uid://b0ty6hvg11gag" path="res://scenes/column/column.gd" id="1_73hc6"]
[ext_resource type="PackedScene" uid="uid://c32hcn5geskv3" path="res://scenes/textbox/text_box.tscn" id="1_iq7rl"]

[node name="Column" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_73hc6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddCardButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add a card"

[node name="ColumnGrabArea" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RemoveColumnButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="Title" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_iq7rl")]
unique_name_in_owner = true
layout_mode = 2
text = "Column title"

[node name="CardTree" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SpacerColumnBottom" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/AddCardButton" to="." method="_on_add_card_button_pressed"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/ColumnGrabArea" to="." method="_on_column_grab_area"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RemoveColumnButton" to="." method="_on_remove_column_button_pressed"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/Title" to="." method="_on_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/SpacerColumnBottom" to="." method="_on_gui_input"]
